force-app/main/default/objects/Ci_User__c/Ci_User__c.object-meta.xml
<CustomObject>
    <description>签到打卡的用户信息</description>
    <label>Ci User</label>
    <nameField>
        <label>Ci User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ci Users</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>