force-app/main/default/objects/Ci_User__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>Your Email</description>
    <inlineHelpText>Your Email</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>