force-app/main/default/objects/Ci_User__c/fields/Login_Password__c.field-meta.xml
<CustomField>
    <fullName>Login_Password__c</fullName>
    <description>登录密码</description>
    <inlineHelpText>登录密码</inlineHelpText>
    <label>Login Password</label>
    <length>10</length>
    <type>Text</type>
</CustomField>