force-app/main/default/objects/Ci_User__c/fields/Notes_Name__c.field-meta.xml
<CustomField>
    <fullName>Notes_Name__c</fullName>
    <description>note name</description>
    <inlineHelpText>您的Note Name</inlineHelpText>
    <label>Notes Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>