force-app/main/default/objects/Ci_User__c/fields/Role__c.field-meta.xml
<CustomField>
    <fullName>Role__c</fullName>
    <description>成员角色-队长，队员，队伍管理者</description>
    <inlineHelpText>成员角色-队长，队员，队伍管理者</inlineHelpText>
    <label>Role</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Caption</fullName>
            </value>
            <value>
                <fullName>Team Member</fullName>
            </value>
            <value>
                <fullName>Team Manger</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>